fix project setup

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
-Provides an extremely lightweight web front end to the configuration library.
+lib_config_web
+==================================================
+
+An example plugin that provides an extremely lightweight web front end to the configuration library.
+
+Dependencies
+--------------------------------------
+
+[lib_config_base] (https://github.com/benleov/lib_config_base)
+[] (http://www.simpleframework.org/)
+[SLF4J](www.slf4j.org/‎) 
+
+Usage
+--------------------------------------
+
+TODO:
